--- a/harbour-warsawbus.desktop
+++ b/harbour-warsawbus.desktop
@@ -10,3 +10,6 @@ Name=Warsaw Bus
 # Remember to comment out the following line, if you do not want to use
 # a different app name in German locale (de).
 Name[de]=harbour-warsawbus
+
+[X-Sailjail]
+Permissions=Internet
